update to GS 0.7.0

--- a/src/main/resources/assets/hbm/lang/ko_kr.lang
+++ b/src/main/resources/assets/hbm/lang/ko_kr.lang
@@ -338,19 +338,19 @@ tile.waste_sand_red.name=오염된 붉은 모래
 tile.waste_gravel.name=오염된 자갈
 item.rod_cobalt.name=코발트 봉
 item.rod_co60.name=코발트-60 봉
-item.rod_rgp.name=반응로급 플루토늄 봉
+item.rod_rgp.name=원자로 등급 플루토늄 봉
 item.rod_ac227.name=악티늄-227 봉
 item.rod_ra226.name=라듐-226 봉
 
 item.rod_dual_cobalt.name=이중 코발트 봉
 item.rod_dual_co60.name=이중 코발트-60 봉
-item.rod_dual_rgp.name=이중 반응로급 플루토늄 봉
+item.rod_dual_rgp.name=이중 원자로 등급 플루토늄 봉
 item.rod_dual_ac227.name=이중 악티늄-227 봉
 item.rod_dual_ra226.name=이중 라듐-226 봉
 
 item.rod_quad_cobalt.name=사중 코발트 봉
 item.rod_quad_co60.name=사중 코발트-60 봉
-item.rod_quad_rgp.name=사중 반응로급 플루토늄 봉
+item.rod_quad_rgp.name=사중 원자로 등급 플루토늄 봉
 item.rod_quad_ac227.name=사중 악티늄-227 봉
 item.rod_quad_ra226.name=사중 라듐-226 봉
 
@@ -1897,26 +1897,26 @@ tile.hadron_coil_schrabidium.name=조밀한 슈라비듐 코일
 tile.hadron_coil_starmetal.name=조밀한 스타메탈 코일
 tile.hadron_diode.name=쇼트키 입자 다이오드
 tile.hadron_plating.name=입자 가속기 판
-tile.hadron_plating_black.name=입자 가속기 판 (Black)
-tile.hadron_plating_blue.name=입자 가속기 판 (Blue)
-tile.hadron_plating_glass.name=입자 가속기 판 (Window)
-tile.hadron_plating_striped.name=입자 가속기 판 (Cool Hazard Stripes)
+tile.hadron_plating_black.name=입자 가속기 판 (검은색)
+tile.hadron_plating_blue.name=입자 가속기 판 (파란색)
+tile.hadron_plating_glass.name=입자 가속기 판 (창문)
+tile.hadron_plating_striped.name=입자 가속기 판 (멋진 경고표지색)
 tile.hadron_plating_voltz.name=입자 가속기 판 (VOLTZ)
 tile.hadron_plating_yellow.name=입자 가속기 판 (YelloDye)
-tile.hadron_access.name=입자 가속기 Access Terminal
-tile.hadron_core.name=입자 가속기 Core Component
-tile.hadron_power.name=입자 가속기 Power Plug
+tile.hadron_access.name=입자 가속기 접근 터미널
+tile.hadron_core.name=입자 가속기 핵심 부품
+tile.hadron_power.name=입자 가속기 전원 플러그
 
-tile.dfc_emitter.name=DFC Emitter
-container.dfcEmitter=DFC Emitter
-tile.dfc_receiver.name=DFC Receiver
-container.dfcReceiver=DFC Receiver
-tile.dfc_injector.name=DFC 연료 Injector
-container.dfcInjector=DFC 연료 Injector
-tile.dfc_stabilizer.name=DFC Stabilizer
-container.dfcStabilizer=DFC Stabilizer
-tile.dfc_core.name=DFC Core Chamber
-container.dfcCore=DFC Core Chamber
+tile.dfc_emitter.name=DFC 방출기
+container.dfcEmitter=DFC 방출기
+tile.dfc_receiver.name=DFC 수신기
+container.dfcReceiver=DFC 수신기
+tile.dfc_injector.name=DFC 연료 주입기
+container.dfcInjector=DFC 연료 주입기
+tile.dfc_stabilizer.name=DFC 안정기
+container.dfcStabilizer=DFC 안정기
+tile.dfc_core.name=DFC 노심 챔버
+container.dfcCore=DFC 노심 챔버
 
 item.laser_crystal_nano.name=나노튜브 레이저 결정
 item.laser_crystal_nano.desc=420km 길이의 다결정 내부 탄소 나노튜브 안테나
@@ -1934,10 +1934,10 @@ item.laser_crystal_cmb.name=제논 레이저 결정
 item.laser_crystal_cmb.desc=납-209-스타메탈 합금 격자 내부에 묶여있는 제논135
 
 item.laser_crystal_dem.name=데모닉 레이저 결정
-item.laser_crystal_dem.desc=Demon-기오슘-Combine Fermion Supercrystal
+item.laser_crystal_dem.desc=데몬-기오슘-결합 페르미온 초결정
 
 item.laser_crystal_bale.name=베일 레이저 결정
-item.laser_crystal_bale.desc=Balepellet coated in 버티슘 in 네오벨라인 Casing
+item.laser_crystal_bale.desc=네오벨라인 케이스 내부의 버티슘으로 코팅된 베일펠릿
 
 item.laser_crystal_digamma.name=디감마 레이저 결정
 
@@ -1959,32 +1959,32 @@ wavelengths.waveRange.xray=9pm-10nm
 wavelengths.waveRange.gamma=<9pm
 wavelengths.waveRange.drx=1916169 플랑크 길이
 
-tile.digamma_matter.name=디감마rium
-tile.geysir_water.name=물 Geysir
-tile.geysir_chlorine.name=Cloud Geysir
-tile.geysir_vapor.name=Vapor Geysir
-tile.geysir_nether.name=Magma Geysir
-tile.stone_porous.name=Porous Stone
+tile.digamma_matter.name=디감마리움
+tile.geysir_water.name=물 간헐천
+tile.geysir_chlorine.name=구름 간헐천
+tile.geysir_vapor.name=수증기 간헐천
+tile.geysir_nether.name=마그마 간헐천
+tile.stone_porous.name=다공성 돌
 
-item.template_folder.name=Machine Template Folder
-item.fluid_identifier.name=Fluid Identifier
-item.forge_fluid_identifier.name=Fluid Identifier
-item.assembly_template.name=Assembly Template:
-item.chemistry_template.name=Chemistry Template:
-item.siren_track.name=Siren Track
+item.template_folder.name=기계 설계도 폴더
+item.fluid_identifier.name=유체 식별자
+item.forge_fluid_identifier.name=유체 식별자
+item.assembly_template.name=조립 설계도:
+item.chemistry_template.name=화학 설계도:
+item.siren_track.name=사이렌 소리
 
-item.bobmazon_materials.name=Vault-tec Support: Materials
-item.bobmazon_machines.name=Vault-tec Support: Blocks and Machines
-item.bobmazon_weapons.name=Vault-tec Support: Weapons and Explosives
-item.bobmazon_tools.name=Vault-tec Support: Tools
-item.bobmazon_hidden.name=Hidden Catalog
+item.bobmazon_materials.name=볼트-텍 지원: 재료
+item.bobmazon_machines.name=볼트-텍 지원: 블럭과 무기
+item.bobmazon_weapons.name=볼트-텍 지원: 무기와 폭발물
+item.bobmazon_tools.name=볼트-텍 지원: 도구
+item.bobmazon_hidden.name=숨겨진 카탈로그
 
-item.fuse.name=Fuse
-item.arc_electrode.name=Graphite Electrode
-item.arc_electrode_burnt.name=Molten Electrode
-item.arc_electrode_desh.name=데쉬 Electrode
+item.fuse.name=퓨즈
+item.arc_electrode.name=흑연 전극
+item.arc_electrode_burnt.name=녹은 전극
+item.arc_electrode_desh.name=데쉬 전극
 
-tile.test_nuke.name=Test Nuke
+tile.test_nuke.name=실험용 핵
 
 item.ingot_th232.name=토륨-232 주괴
 item.ingot_uranium.name=우라늄 주괴
@@ -2001,34 +2001,34 @@ item.ingot_titanium.name=티타늄 주괴
 item.ingot_cobalt.name=코발트 주괴
 item.sulfur.name=황
 item.nugget_polonium.name=폴로늄-210 조각
-item.nugget_pu_mix.name=Reactor Grade 플루토늄 조각
+item.nugget_pu_mix.name=원자로 등급 플루토늄 조각
 item.powder_polonium.name=폴로늄-210 가루
 item.rod_polonium.name=폴로늄-210 Rod
 item.rod_dual_polonium.name=폴로늄-210 Dual Rod
 item.rod_quad_polonium.name=폴로늄-210 Quad Rod
 
-item.niter.name=Niter
+item.niter.name=초석
 item.ingot_copper.name=산업용 등급 구리
 item.ingot_red_copper.name=마인크래프트 등급 구리
 item.ingot_tungsten.name=텅스텐 주괴
 # Yeah, aluminium. -um gang!
-item.ingot_aluminium.name=Aluminium 주괴
+item.ingot_aluminium.name=알루미늄 주괴
 item.fluorite.name=형석
 item.ingot_steel.name=강철 주괴
-item.plate_steel.name=강철 Plate
+item.plate_steel.name=강철 판
 item.ingot_beryllium.name=베릴륨 주괴
-item.plate_schrabidium.name=슈라비듐-326 Plate
-item.ingot_schraranium.name=Schraranium 주괴
-item.ingot_semtex.name=Bar of Semtex
+item.plate_schrabidium.name=슈라비듐-326 판
+item.ingot_schraranium.name=슈라라늄 주괴
+item.ingot_semtex.name=셈텍스 막대기
 item.ingot_schrabidium.name=슈라비듐-326 주괴
 item.nugget_schrabidium.name=슈라비듐-326 조각
-item.plate_copper.name=Copper Plate
-item.board_copper.name=Copper Panel
+item.plate_copper.name=구리 판
+item.board_copper.name=구리 패널
 item.ingot_advanced_alloy.name=고급 합금 주괴
-item.plate_advanced_alloy.name=고급 합금 Plate
-item.wire_advanced_alloy.name=Super Conductor
-item.coil_advanced_alloy.name=Super Conducting 코일
-item.coil_advanced_torus.name=Super Conducting Ring 코일
+item.plate_advanced_alloy.name=고급 합금 판
+item.wire_advanced_alloy.name=초전도체
+item.coil_advanced_alloy.name=초전도 코일
+item.coil_advanced_torus.name=초전도 링 코일
 item.coil_gold.name=금 코일
 item.coil_gold_torus.name=금 고리 코일
 item.ring_starmetal.name=§9스타메탈 Ring§r
@@ -2038,11 +2038,11 @@ item.ingot_magnetized_tungsten.name=Magnetized 텅스텐 주괴
 item.ingot_meteorite.name=Meteorite 주괴
 item.ingot_meteorite_forged.name=Forged Meteorite 주괴
 item.ingot_combine_steel.name=CMB 강철 주괴
-item.plate_combine_steel.name=CMB 강철 Plate
-item.wire_magnetized_tungsten.name=4000K High Temperature Super Conductor
-item.coil_magnetized_tungsten.name=4000K High Temperature Super Conducting 코일
-item.plate_mixed.name=Mixed Plate
-item.plate_paa.name=PaA Alloy Plate
+item.plate_combine_steel.name=CMB 강철 판
+item.wire_magnetized_tungsten.name=4000K High Temperature 초전도체
+item.coil_magnetized_tungsten.name=4000K High Temperature 초전도 코일
+item.plate_mixed.name=Mixed 판
+item.plate_paa.name=PaA Alloy 판
 item.ingot_dura_steel.name=고속도강 주괴
 item.ingot_polymer.name=중합체 막대기
 item.ingot_bakelite.name=베이클라이트 막대기
@@ -2062,7 +2062,7 @@ item.bolt_compound.name=Reinforced 터빈 Shaft
 item.plate_polymer.name=Insulator
 item.ingot_solinium.name=Solinium-327 주괴
 item.nugget_solinium.name=Solinium-327 조각
-item.photo_panel.name=Photovoltaic Panel
+item.photo_panel.name=Photovoltaic 패널
 item.sat_base.name=Satellite Base
 item.thruster_nuclear.name=LV-N Nuclear 로켓 Engine
 item.sat_head_mapper.name=High-Gain Optical Camera
@@ -2078,8 +2078,8 @@ item.ingot_unobtainium.name=언옵테이늄 주괴
 item.ingot_daffergon.name=Daffergon 주괴
 item.ingot_verticium.name=버티슘 주괴
 item.nugget_australium.name=오스트레일륨 조각
-item.nugget_australium_greater.name=오스트레일륨 -406 조각
-item.nugget_australium_lesser.name=오스트레일륨 -405 조각
+item.nugget_australium_greater.name=오스트레일륨-406 조각
+item.nugget_australium_lesser.name=오스트레일륨-405 조각
 item.nugget_weidanium.name=Weidanium 조각
 item.nugget_reiium.name=Reiium 조각
 item.nugget_unobtainium.name=언옵테이늄 조각
@@ -2099,7 +2099,7 @@ item.nugget_dineutronium.name=다이뉴트로늄 조각
 item.ingot_starmetal.name=§9스타메탈 주괴§r
 item.ingot_saturnite.name=새터나이트 주괴
 item.ingot_schrabidate.name=철 슈라비데이트 주괴
-item.plate_saturnite.name=새터나이트 Plate
+item.plate_saturnite.name=새터나이트 판
 item.ingot_fiberglass.name=Fiberglass 막대기
 item.ingot_arsenic.name=비소 주괴
 item.nugget_arsenic.name=비소 조각
@@ -2121,11 +2121,11 @@ item.nugget_pu238.name=플루토늄-238 조각
 item.nugget_pu239.name=플루토늄-239 조각
 item.nugget_pu240.name=플루토늄-240 조각
 item.nugget_pu241.name=플루토늄-241 조각
-item.plate_titanium.name=티타늄 Plate
-item.plate_aluminium.name=Aluminium Plate
+item.plate_titanium.name=티타늄 판
+item.plate_aluminium.name=알루미늄 판
 item.plate_armor_lunar.name=Lunar Plating
 item.plate_armor_ajr.name=Iron-Shod 장갑판
-item.plate_armor_titanium.name=티타늄 Armor Plate
+item.plate_armor_titanium.name=티타늄 Armor 판
 item.plate_armor_hev.name=Reactive 장갑판
 item.hev_battery.name=Suit 배터리
 item.wire_red_copper.name=적동 Wire
@@ -2142,14 +2142,14 @@ item.crystal_thorium.name=토륨 결정
 item.crystal_plutonium.name=플루토늄 결정
 item.crystal_titanium.name=티타늄 결정
 item.crystal_sulfur.name=황 결정
-item.crystal_niter.name=Niter 결정
-item.crystal_copper.name=Copper 결정
+item.crystal_niter.name=초석 결정
+item.crystal_copper.name=구리 결정
 item.crystal_tungsten.name=텅스텐 결정
 item.crystal_aluminium.name=알루미늄 결정
 item.crystal_fluorite.name=형석 결정
 item.crystal_beryllium.name=베릴륨 결정
 item.crystal_lead.name=납 결정
-item.crystal_schraranium.name=Schraranium 결정
+item.crystal_schraranium.name=슈라라늄 결정
 item.crystal_schrabidium.name=슈라비듐 결정
 item.crystal_rare.name=Rare Earth 결정
 item.crystal_phosphorus.name=Phosphorus 결정
@@ -2159,7 +2159,7 @@ item.crystal_trixite.name=Trixite 결정
 item.crystal_asbestos.name=석면 결정
 
 item.wire_aluminium.name=알루미늄 Wire
-item.wire_copper.name=Copper Wire
+item.wire_copper.name=구리 Wire
 item.wire_gold.name=금 Wire
 item.wire_schrabidium.name=슈라비듐 Wire
 
@@ -2219,7 +2219,7 @@ tile.block_saturnite.name=새터나이트 블럭
 tile.block_ra226.name=라듐-226 블럭
 tile.block_radspice.name=네오벨라인 블럭
 tile.block_polymer.name=중합체 블럭
-tile.block_copper.name=Copper 블럭
+tile.block_copper.name=구리 블럭
 tile.block_fluorite.name=형석 블럭
 tile.block_niter.name=초석 블럭
 tile.block_red_copper.name=적동 블럭
@@ -2244,10 +2244,10 @@ tile.block_reiium.name=Reiium 블럭
 tile.block_unobtainium.name=언옵테이늄 블럭
 tile.block_daffergon.name=Daffergon 블럭
 tile.block_verticium.name=버티슘 블럭
-tile.block_desh.name=Reinforced Desh 블럭
+tile.block_desh.name=Reinforced 데쉬 블럭
 tile.block_dineutronium.name=Dineutronium 블럭
 tile.block_schrabidate.name=철 슈라비데이트 블럭
-tile.block_schraranium.name=Schraranium 블럭
+tile.block_schraranium.name=슈라라늄 블럭
 tile.block_dura_steel.name=Reinforced 고속도강 블럭
 tile.block_yellowcake.name=우라늄정광 블럭
 tile.block_starmetal.name=§9스타메탈 블럭§r
@@ -2276,9 +2276,9 @@ tile.block_solinium.name=Solinium-327 블럭
 tile.block_schrabidium_fuel.name=슈라비듐 연료 블럭
 
 tile.ore_aluminium.name=알루미늄 광석
-tile.ore_copper.name=Copper 광석
+tile.ore_copper.name=구리 광석
 tile.ore_fluorite.name=형석 광석
-tile.ore_niter.name=Niter 광석
+tile.ore_niter.name=초석 광석
 tile.ore_sulfur.name=황 광석
 tile.ore_titanium.name=티타늄 광석
 tile.ore_tungsten.name=텅스텐 광석
@@ -2290,7 +2290,7 @@ tile.ore_beryllium.name=베릴륨 광석
 tile.ore_lignite.name=Lignite 광석
 tile.ore_asbestos.name=석면 광석
 tile.ore_gneiss_asbestos.name=Schist 석면 광석
-tile.ore_gneiss_copper.name=Schist Copper 광석
+tile.ore_gneiss_copper.name=Schist 구리 광석
 tile.ore_gneiss_gold.name=Schist 금 광석
 tile.ore_gneiss_iron.name=Schist Iron 광석
 tile.ore_gneiss_lithium.name=Schist Lithium 광석
@@ -2314,7 +2314,7 @@ tile.ore_nether_coal.name=Burning 네더 Coal 광석
 tile.ore_nether_smoldering.name=Smoldering 네더rack
 
 tile.ore_meteor_aluminium.name=Meteor 알루미늄 광석
-tile.ore_meteor_copper.name=Meteor Copper 광석
+tile.ore_meteor_copper.name=Meteor 구리 광석
 tile.ore_meteor_sulfur.name=Meteor 황 광석
 tile.ore_meteor_titanium.name=Meteor 티타늄 광석
 tile.ore_meteor_tungsten.name=Meteor 텅스텐 광석
@@ -2457,7 +2457,7 @@ item.powder_aluminium.name=알루미늄 가루
 item.powder_asbestos.name=석면 가루
 item.powder_bismuth.name=비스무트-209 가루
 item.powder_beryllium.name=베릴륨 가루
-item.powder_copper.name=Copper 가루
+item.powder_copper.name=구리 가루
 item.powder_titanium.name=티타늄 가루
 item.powder_tungsten.name=텅스텐 가루
 item.powder_uranium.name=우라늄 가루
@@ -2604,13 +2604,13 @@ item.dynosphere_euphemium_charged.name=유페뮴 Dynosphere (Charged)
 item.dynosphere_dineutronium.name=다이뉴트로늄 Dynosphere
 item.dynosphere_dineutronium_charged.name=다이뉴트로늄 Dynosphere (Charged)
 
-item.plate_iron.name=Iron Plate
-item.plate_lead.name=납 Plate
-item.coil_copper.name=Copper 코일
-item.coil_copper_torus.name=Ring 코일
+item.plate_iron.name=Iron 판
+item.plate_lead.name=납 판
+item.coil_copper.name=구리 코일
+item.coil_copper_torus.name=링 코일
 item.wire_tungsten.name=텅스텐 Wire
 item.coil_tungsten.name=Heating 코일
-item.coin_maskman.name=Maskman Coin
+item.coin_maskman.name=마스크맨 Coin
 item.coin_creeper.name=Nuclear Creeper Coin
 item.coin_radiation.name=Radiation Coin
 item.coin_worm.name=Balls-O-Tron Coin
@@ -2643,13 +2643,13 @@ item.rbmk_fuel_mep.name=MEP-239 RBMK 연료봉
 item.rbmk_fuel_mes.name=MES RBMK 연료봉
 item.rbmk_fuel_meu.name=MEU RBMK 연료봉
 item.rbmk_fuel_mox.name=MOX RBMK 연료봉
-item.rbmk_fuel_po210be.name=Po210Be RBMK Neutron Source
-item.rbmk_fuel_pu238be.name=Pu238Be RBMK Neutron Source
-item.rbmk_fuel_ra226be.name=Ra226Be RBMK Neutron Source
+item.rbmk_fuel_po210be.name=Po210Be RBMK 중성자원
+item.rbmk_fuel_pu238be.name=Pu238Be RBMK 중성자원
+item.rbmk_fuel_ra226be.name=Ra226Be RBMK 중성자원
 item.rbmk_fuel_thmeu.name=ThMEU RBMK 연료봉
 item.rbmk_fuel_ueu.name=NU RBMK 연료봉
-item.rbmk_lid.name=RBMK Cover Panel
-item.rbmk_lid_glass.name=RBMK Glass Cover Panel
+item.rbmk_lid.name=RBMK Cover 패널
+item.rbmk_lid_glass.name=RBMK Glass Cover 패널
 item.rbmk_pellet_balefire.name=베일파이어 연료 펠릿
 item.rbmk_pellet_balefire_gold.name=Flashgold 연료 펠릿
 item.rbmk_pellet_drx.name=§c디감마 연료 펠릿§r
@@ -2672,9 +2672,9 @@ item.rbmk_pellet_mep.name=MEP 연료 펠릿
 item.rbmk_pellet_mes.name=MES 연료 펠릿
 item.rbmk_pellet_meu.name=MEU 연료 펠릿
 item.rbmk_pellet_mox.name=MOX 연료 펠릿
-item.rbmk_pellet_po210be.name=Po210Be Neutron Source 펠릿
-item.rbmk_pellet_pu238be.name=Pu238Be Neutron Source 펠릿
-item.rbmk_pellet_ra226be.name=Ra226Be Neutron Source 펠릿
+item.rbmk_pellet_po210be.name=Po210Be 중성자원 펠릿
+item.rbmk_pellet_pu238be.name=Pu238Be 중성자원 펠릿
+item.rbmk_pellet_ra226be.name=Ra226Be 중성자원 펠릿
 item.rbmk_pellet_thmeu.name=ThMEU 연료 펠릿
 item.rbmk_pellet_ueu.name=NU 연료 펠릿
 item.rbmk_tool.name=RBMK Console Linking Device
@@ -3369,7 +3369,7 @@ tile.block_schrabidium.name=슈라비듐-326 블럭
 tile.block_euphemium.name=Euphemium 블럭
 tile.block_schrabidium_cluster.name=슈라비듐 Cluster
 tile.block_euphemium_cluster.name=Euphemium-Etched 슈라비듐 Cluster
-item.plate_gold.name=금 Plate
+item.plate_gold.name=금 판
 
 item.syringe_empty.name=Empty Syringe
 item.syringe_antidote.name=Antidote
@@ -3480,9 +3480,9 @@ item.apple_euphemium.name=유페뮴 Apple
 item.ingot_euphemium.name=유페뮴 주괴
 item.nugget_euphemium.name=유페뮴 조각
 item.rod_quad_euphemium.name=Burned Out Quad 슈라비듐 봉
-item.plate_euphemium.name=유페뮴 Compound Plate
-item.plate_dineutronium.name=다이뉴트로늄 Compound Plate
-item.plate_desh.name=데쉬 Compound Plate
+item.plate_euphemium.name=유페뮴 Compound 판
+item.plate_dineutronium.name=다이뉴트로늄 Compound 판
+item.plate_desh.name=데쉬 Compound 판
 
 item.euphemium_helmet.name=유페뮴 헬멧
 item.euphemium_plate.name=유페뮴 흉갑
@@ -4156,19 +4156,19 @@ item.stamp_44.name=.44 Magnum 금형
 item.stamp_9.name=Small Caliber 금형
 item.stamp_50.name=Large Caliber 금형
 
-item.stamp_desh_flat.name=평평한 금형 (Desh)
-item.stamp_desh_plate.name=판 금형 (Desh)
-item.stamp_desh_wire.name=전선 금형 (Desh)
-item.stamp_desh_circuit.name=회로 금형 (Desh)
-item.stamp_desh_357.name=.357 Magnum 금형 (Desh)
-item.stamp_desh_44.name=.44 Magnum 금형 (Desh)
-item.stamp_desh_9.name=Small Caliber 금형 (Desh)
-item.stamp_desh_50.name=Large Caliber 금형 (Desh)
+item.stamp_desh_flat.name=평평한 금형 (데쉬)
+item.stamp_desh_plate.name=판 금형 (데쉬)
+item.stamp_desh_wire.name=전선 금형 (데쉬)
+item.stamp_desh_circuit.name=회로 금형 (데쉬)
+item.stamp_desh_357.name=.357 Magnum 금형 (데쉬)
+item.stamp_desh_44.name=.44 Magnum 금형 (데쉬)
+item.stamp_desh_9.name=Small Caliber 금형 (데쉬)
+item.stamp_desh_50.name=Large Caliber 금형 (데쉬)
 
 item.part_lithium.name=Box of Lithium Dust
 item.part_beryllium.name=Box of 베릴륨 Dust
 item.part_carbon.name=Box of Carbon Dust
-item.part_copper.name=Box of Copper Dust
+item.part_copper.name=Box of 구리 Dust
 item.part_plutonium.name=Box of 플루토늄 Dust
 
 item.particle_aelectron.name=양전자 Capsule
@@ -4181,7 +4181,7 @@ item.particle_higgs.name=힉스 보손 Capsule
 item.particle_muon.name=뮤온 Capsule
 item.particle_sparkticle.name=Sparkticle Capsule
 item.particle_strange.name=Strange Quark Capsule
-item.particle_copper.name=Copper 이온 Capsule
+item.particle_copper.name=구리 이온 Capsule
 item.particle_digamma.name=§cThe 디감마 Particle§r
 item.particle_lead.name=납 이온 Capsule
 item.particle_hydrogen.name=수소 이온 Capsule
@@ -4212,7 +4212,7 @@ item.ams_catalyst_beryllium.name=베릴륨 DFC 촉매
 item.ams_catalyst_caesium.name=Caeseium DFC 촉매
 item.ams_catalyst_cerium.name=세륨 DFC 촉매
 item.ams_catalyst_cobalt.name=코발트 DFC 촉매
-item.ams_catalyst_copper.name=Copper DFC 촉매
+item.ams_catalyst_copper.name=구리 DFC 촉매
 item.ams_catalyst_euphemium.name=유페뮴 DFC 촉매
 item.ams_catalyst_iron.name=Iron DFC 촉매
 item.ams_catalyst_lithium.name=Lithium DFC 촉매
@@ -4455,7 +4455,7 @@ item.ingot_tantalium.name=Tantalium 주괴
 item.ingot_tcalloy.name=테크네튬 강철 주괴
 item.ingot_technetium.name=Technetium-99 주괴
 tile.cluster_aluminium.name=알루미늄 광석 덩어리
-tile.cluster_copper.name=Copper 광석 덩어리
+tile.cluster_copper.name=구리 광석 덩어리
 tile.cluster_depth_iron.name=Depth Iron 광석 덩어리
 tile.cluster_depth_titanium.name=Depth 티타늄 광석 덩어리
 tile.cluster_depth_tungsten.name=Depth 텅스텐 광석 덩어리
@@ -4499,7 +4499,7 @@ tile.block_graphite_drilled.name=Drilled Graphite
 tile.block_graphite_fuel.name=Pile 연료
 tile.block_graphite_plutonium.name=Pile 연료 (Bred)
 tile.block_graphite_rod.name=Pile Control 봉
-tile.block_graphite_source.name=Pile Neutron Source
+tile.block_graphite_source.name=Pile 중성자원
 item.gem_tantalium.name=Tantalium Polycrystal
 item.powder_i131.name=아이오딘-131 가루
 item.powder_i131_tiny.name=작은 아이오딘-131 가루
@@ -4539,7 +4539,7 @@ item.nuclear_waste_vitrified.name=유리화된 핵 폐기물
 item.nuclear_waste_vitrified_tiny.name=작은 유리화된 핵 폐기물
 item.pile_rod_boron.name=Chicago Pile 제어봉
 item.pile_rod_plutonium.name=Chicago Pile 플루토늄 봉
-item.pile_rod_source.name=Chicago Pile Ra226Be Neutron Source
+item.pile_rod_source.name=Chicago Pile Ra226Be 중성자원
 item.pile_rod_uranium.name=Chicago Pile 우라늄 봉
 item.ammo_50bmg_flechette.name=.50 BMG Flechette Round
 item.ammo_50bmg_flechette_am.name=.50 BMG Flechette Round (아메리슘)
@@ -4693,7 +4693,7 @@ tile.deco_pipe_rim_red.name=Red 강철 파이프 (Rimmed)
 tile.deco_pipe_rim_marked.name=Gas 파이프 (Rimmed)
 tile.ladder_aluminium.name=알루미늄 사다리
 tile.ladder_cobalt.name=코발트 사다리
-tile.ladder_copper.name=Copper 사다리
+tile.ladder_copper.name=구리 사다리
 tile.ladder_gold.name=금en 사다리
 tile.ladder_iron.name=Iron 사다리
 tile.ladder_lead.name=납 사다리
